# fig

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.embed  Dockerfile.streamlit  Jenkinsfile  Jenkinsfile-build  README.md  README_EN.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: auth.yaml  db.yaml  embed.yaml  gui.yaml  llm.yaml  logging.yaml  metrics.yaml  pricing.yaml  qdrant.yaml  session.yaml
deployment/k8s-aliyun/: grafana-dashboard.json  ingress.yaml  init-db-job.yaml  job-build.yaml  kustomization.yaml  oss-pv.yaml  oss-pvc.yaml  oss-webui-external.yaml  oss-webui-plugin.yaml  prometheus-rules.yaml  secret.yaml
deployment/k8s-aws/: README.md  ingress.yaml
deployment/scripts/: build-kf-api.ps1  build-kf-embed.ps1  create-k8s-secrets.sh  init-metrics-db.sh  push-webui.ps1  push-workflow.ps1
docs/: api-reference.md  api-reference_CN.md  api-reference_EN.md  architecture.md  architecture_CN.md  architecture_EN.md  cli-reference.md  database_CN.md  database_EN.md  db-config.md  db-schema-norm.md  db-schema-norm_EN.md  deferred.md  deployment_CN.md  deployment_EN.md  embed-config.md  improvement-plan.md  local-setup.md  local-setup_CN.md  local-setup_EN.md  manual-test-plan-v2.md  manual-test-plan.docx  manual-test-plan.md  manual-test_CN.md  manual-test_EN.md  metrics-db-setup.md  metrics-db-setup_EN.md  metrics.md  metrics_CN.md  phase2-plan.md  roadmap-next.md  session-design.md  session-guide.md  session_CN.md  testing_EN.md  tool-dev-guide.md  tools-reference.md  tools-reference_EN.md  workflow-design.md  workflow-guide.md  (+1 more)
docs/deployment/: alicloud-serverless.md  kubernetes.md
docs/deployments/: db-schema-norm.md  deployment_CN.md  deployment_EN.md  local-setup_CN.md  local-setup_EN.md  metrics-db-setup.md  metrics-db-setup_EN.md
docs/design/: metrics_CN.md  (+3 more)
e2e/: package-lock.json  playwright.config.js
k8s/: configmap.yaml  ingress.yaml  init-db-job.yaml  job-build.yaml  kustomization.yaml  prometheus-rules.yaml  secret.yaml
k8s-aws/: README.md  config-pvc.yaml  ingress.yaml  storageclass.yaml
scripts/: create-k8s-secrets.sh  init-metrics-db.sh
src/: config.py
tests/: conftest.py  test_api.py  test_auth.py  test_builder.py  test_chunker.py  test_cli.py  test_config.py  test_coverage_edge.py  test_dag_engine.py  test_db.py  test_db_integration.py  test_embed_service.py  test_gui.py  test_llm_client.py  test_metrics.py  test_qdrant.py  test_session_store.py  test_tool_impl.py  test_tool_impl_extra.py  test_tools.py
(+177 files in other folders)
